wrap header and fix styles

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 body {
+  background-color: #d7e3fc;
+}
+
+main {
   padding: 1rem;
   background-color: #d7e3fc;
   max-width: 1200px;
@@ -135,20 +139,27 @@ li:hover {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
+  width: 100%;
+  margin-bottom: 0.2rem;
   position: sticky;
   top: 0;
   z-index: 1000;
   background-color: #d7e3fc;
 }
 
+.header {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
 nav {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 footer {
@@ -173,12 +184,9 @@ footer {
   color: inherit;
 }
 
-body.dark-theme {
-  background-color: #1e293b;
-  color: #e2e8f0;
-}
-
-header.dark-theme {
+body.dark-theme,
+header.dark-theme,
+main.dark-theme {
   background-color: #1e293b;
   color: #e2e8f0;
 }
